--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
 </head>
   <body class="bg-black text-white antialiased selection:bg-lsr-gold selection:text-black">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
